feat: pretify browser endpoints.
